base/mediawiki-istio-ingress/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mediawiki-vs
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/mediawiki-gateway
  http:
    - match:
      - uri:
          prefix: /wiki/Main_Page
      route:
        - destination:
            host: mediawiki-svc.mediawiki.svc.cluster.local
            port:
              number: 80
